@@ -19,7 +19,27 @@
 ## -*- texinfo -*-
 ## @deftypefn {Function File} {} substruct (@var{type}, @var{subs}, @dots{})
 ## Create a subscript structure for use with @code{subsref} or
-## @code{subsasgn}.
+## @code{subsasgn}. For example:
+##
+## @example
+## @group
+## idx = substruct("()", @{3, ":"@})
+##      @result{}
+##        idx =
+##        @{
+##          type = ()
+##          subs =
+##          @{
+##            [1,1] =  3
+##            [1,2] = :
+##          @}
+##        @}
+## x = [1, 2, 3; 4, 5, 6; 7, 8, 9];
+## subsref(x, idx)
+##      @result{} ans = 
+##         7  8  9
+## @end group
+## @end example
 ## @seealso{subsref, subsasgn}
 ## @end deftypefn
 
