@@ -1,3 +1,8 @@
+2010-01-17  Thorsten Meyer  <thorsten.meyier@gmx.de>
+
+	* interpreter/container.txi (Creating Cell Arrays): Add
+	docstring for cellslices function.
+
 2010-01-09  John W. Eaton  <jwe@octave.org>
 
 	* interpreter/munge-texi.cc: Avoid C-style casts.
